--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "megaproject",
+  "name": "12megaproject",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,27 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.1",
-    "@tinymce/tinymce-react": "^4.3.2",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@tinymce/tinymce-react": "^5.0.1",
     "appwrite": "^13.0.1",
-    "html-react-parser": "^5.1.1",
+    "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3"
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
   }
 }
